@@ -10,6 +10,7 @@ $Id$
 	Switched the stderr_redir stuff to use muxevents.
 	Print C-\ correctly (from gildea)
 	Dropped first brace in muxevents functions for consistency
+	Catch SIGHUP and SIGTERM and do a proper logout
 	
 2.1.5
 	Added a licence
